colang-cli/tests/samples/features/templates/good/limited_recursion_through_method_body.co
struct Foo<T> {
  y: int;

  fun meth(&self): int {
    var x: Foo<Foo<T>>;
    x.y = 42;
    x.y
  }
}

fun main() {
  var f: Foo<int>;
  assert(f.meth() == 42);
}
