colang-cli/tests/samples/features/templates/compilation_error/infinite_template_method_chain.co
struct Foo<T> {
  fun meth(&self): int {
    var x: Foo<Foo<T>>;
    x.meth()
  }
}

fun main() {
  var f: Foo<int>;
  writeln f.meth();
}
